# PyRates_team

./: Check_First.py  README.md  conftest.py  pyproject.toml  pytest.ini  test_login.py
NVoronova/: hi.py  test_count_word_selenium.py  test_simple.py
Sergeev/project-poetry/: pyproject.toml
Shvedov_Vitaliy/: test.txt  test_simple.py
SwagLabs_Project /: conftest.py  test_login.py
SwagLabs_Project /pages/: base_page.py  locators.py  login_page.py
Timashkov_Anton/: conftest.py  count_of_word.py  pytest.ini  simple_test.py  test_main_page.py
Timashkov_Anton/pages/: base_page.py  main_page.py
pages/: base_page.py  locators.py  login_page.py
