[tool.poetry]
name = "project-poetry"
version = "0.1.0"
description = ""
authors = ["Dim <dismitry@yandex.ru>"]
readme = "README.md"
packages = [{include = "project_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
flake8 = "^5.0.4"
selenium = "^4.5.0"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
